2003-05-19  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* hashtable.h (struct ht_identifier): Add new field "hash_value".
	* hashtable.c (ht_lookup): Use it.
	(ht_expand): Likewise.  Avoid doing the same computation twice.
	* tree.h (IDENTIFIER_HASH_VALUE): New macro.

2003-05-19  Nick Clifton  <nickc@redhat.com>

	* config/arm/arm.c (use_return_insn): Do not use a single return
	instruction for interrupt handlers which have to create a stack
	frame.
	(arm_expand_prologue): Do not pre-bias the return address of
	interrupt handlers which create a stack frame.

2003-05-19  Eric Botcazou  <ebotcazou@libertysurf.fr>

	Backport from mainline:

	2003-05-10  Alexander Aganichev  <aaganichev@yandex.ru>

	* config/i386/i386.h (MODES_TIEABLE_P): Fix typo.

2003-05-16  Wolfgang Bangerth <bangerth@dealii.org>

	* doc/bugreport.texi: Remove most of the preface of the
	bugs section.

2003-05-16  Nick Clifton  <nickc@redhat.com>

	* config/mcore/mcore.md (jump): Use emit_jump_insn to generate the
	jump insn.

2003-02-24  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (struct ix86_address): Add seg.
	(no_seg_address_operand): New function.
	(ix86_decompose_address): Support segment overrides.
	(ix86_address_cost): Take segment overrides into account.
	(legitimate_address_p): Remove UNSPEC_TP special casing.
	(get_thread_pointer): Add to_reg argument.
	(legitimize_address): Move TLS emit code...
	(legitimize_tls_address): ...here.  New function.
	(print_operand_address): Handle segment overrides.
	(ix86_expand_move): Use legitimize_tls_address.
	* config/i386/i386.h (MASK_SVR3_SHLIB, TARGET_SVR3_SHLIB): Remove.
	(MASK_TLS_DIRECT_SEG_REFS, TARGET_TLS_DIRECT_SEG_REFS): Define.
	(TARGET_SWITCHES): Remove -msvr3-shlib, add
	TARGET_TLS_DIRECT_SEG_REFS_DEFAULT to default.
	(TARGET_TLS_DIRECT_SEG_REFS_DEFAULT): Define to 0 if not defined.
	(RTX_COSTS): Handle segment overrides.
	(PREDICATE_CODES): Add no_seg_address_operand.